compiler/tests/fixtures/invalid/semantics/plan_selector_targets_undefined_plan.viv
// Invalid: plan selector targets undefined plan

plan-selector pick:
    roles:
        @actor:
            as: character
    target in order:
        nonexistent;
